# bedrock-inference

./: .gitignore  LICENSE  README.md  bedrock_inference_example.ipynb  pyproject.toml
src/bedrock_inference/: __init__.py  bedrock.py
