[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bedrock_inference"
version = "0.0.13"
authors = [
  { name="Tommaso Mario Buonocore", email="tommaso.buonocore@unipv.it" },
]
description = "Login into your AWS and call Bedrock models in Python"
keywords = ["aws","bedrock","llm","inference","generative_ai"]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "beautifulsoup4>=4.12",
    "boto3>=1.35",
    "botocore>=1.35",
    "pandas>=2.2"
]


[project.urls]
Homepage = "https://github.com/detsutut/bedrock_inference"
Issues = "https://github.com/detsutut/bedrock_inference/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
